--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -23,10 +24,13 @@
                         <font>
                            <Font size="15.0" />
                         </font></Button>
-                     <CheckBox fx:id="available" layoutX="22.0" layoutY="186.0" mnemonicParsing="false" text="Available" />
-                     <CheckBox fx:id="unAvailable" layoutX="22.0" layoutY="227.0" mnemonicParsing="false" text="Unavailable" />
-                     <JFXTextField fx:id="taxiId" layoutX="23.0" layoutY="109.0" />
-                     <Label layoutX="23.0" layoutY="69.0" text="Taxt_Id:" />
+                     <CheckBox fx:id="available" layoutX="21.0" layoutY="201.0" mnemonicParsing="false" text="Available" />
+                     <CheckBox fx:id="unAvailable" layoutX="21.0" layoutY="257.0" mnemonicParsing="false" text="Unavailable" />
+                     <JFXTextField fx:id="taxiId" layoutX="24.0" layoutY="65.0" />
+                     <Label layoutX="22.0" layoutY="31.0" text="Taxt_Id:" />
+                     <JFXTreeTableView fx:id="treeTableView" layoutX="317.0" layoutY="132.0" prefHeight="224.0" prefWidth="213.0" />
+                     <JFXTextField layoutX="345.0" layoutY="65.0" />
+                     <Label layoutX="345.0" layoutY="31.0" text="Station_Id:" />
                   </children></AnchorPane>
             </content>
          </Tab>
