--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -5,10 +5,10 @@
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
@@ -20,15 +20,29 @@
             <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <CheckBox fx:id="available" layoutX="14.0" layoutY="322.0" mnemonicParsing="false" text="Available" />
-                     <CheckBox fx:id="unAvailable" layoutX="14.0" layoutY="355.0" mnemonicParsing="false" text="Unavailable" />
+                     <Pane prefHeight="471.0" prefWidth="188.0">
+                        <children>
+                           <Pane layoutX="8.0" layoutY="14.0" opacity="0.85" prefHeight="146.0" prefWidth="173.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
+                              <children>
+                                 <JFXTextField fx:id="stationId" layoutX="22.0" layoutY="33.0" promptText="Station-Id" />
+                                 <JFXButton buttonType="RAISED" layoutX="22.0" layoutY="107.0" onAction="#addDriver" prefHeight="25.0" prefWidth="129.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Create" textFill="WHITE" />
+                              </children>
+                           </Pane>
+                           <Pane layoutX="8.0" layoutY="320.0" opacity="0.85" prefHeight="146.0" prefWidth="173.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
+                              <children>
+                                 <JFXTextField fx:id="taxiId" layoutX="26.0" layoutY="31.0" promptText="Taxi-Id" />
+                                 <JFXButton buttonType="RAISED" layoutX="29.0" layoutY="96.0" onAction="#saveTaxiAvailability" prefWidth="129.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Save" textFill="WHITE" />
+                              </children>
+                           </Pane>
+                           <Pane layoutX="8.0" layoutY="189.0" opacity="0.85" prefHeight="94.0" prefWidth="173.0" style="-fx-border-color: #ccc; -fx-background-radius: 2px; -fx-border-radius: 15;">
+                              <children>
+                                 <CheckBox fx:id="available" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Available" />
+                                 <CheckBox fx:id="unAvailable" layoutX="14.0" layoutY="47.0" mnemonicParsing="false" text="Unavailable" />
+                              </children>
+                           </Pane>
+                        </children>
+                     </Pane>
                      <JFXTreeTableView fx:id="treeTableView" layoutX="187.0" prefHeight="472.0" prefWidth="365.0" />
-                     <JFXTextField fx:id="stationId" layoutX="14.0" layoutY="83.0" />
-                     <Label layoutX="14.0" layoutY="40.0" text="Station_Id:" />
-                     <JFXButton layoutX="70.0" layoutY="406.0" onAction="#saveTaxiAvailability" text="Save" />
-                     <JFXButton layoutX="16.0" layoutY="406.0" onAction="#addDriver" text="Create" />
-                     <JFXTextField fx:id="taxiId" layoutX="14.0" layoutY="243.0" />
-                     <Label layoutX="16.0" layoutY="193.0" text="Taxi_Id:" />
                   </children></AnchorPane>
             </content>
          </Tab>
