--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -5,10 +5,10 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
     <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
@@ -20,14 +20,23 @@
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <Label layoutX="14.0" layoutY="14.0" text="Delay:" />
-                     <Label layoutX="299.0" layoutY="14.0" text="Message:" />
-                     <JFXTreeTableView fx:id="treeView" layoutY="105.0" prefHeight="284.0" prefWidth="550.0" />
-                     <JFXButton buttonType="RAISED" layoutX="232.0" layoutY="394.0" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="86.0" ripplerFill="WHITE" style="-fx-background-color: #641c24; -fx-background-radius: 40;" text="Save" textFill="WHITE" />
-                     <JFXTextField fx:id="delay" layoutX="80.0" layoutY="10.0" />
-                     <JFXTextArea fx:id="driverMessage" layoutX="299.0" layoutY="36.0" prefHeight="56.0" prefWidth="218.0" />
-                     <JFXTextField fx:id="taxiId" layoutX="80.0" layoutY="67.0" />
-                     <Label layoutX="14.0" layoutY="72.0" text="TaxiId:" />
+                     <Pane layoutX="5.0" layoutY="14.0" opacity="0.85" prefHeight="80.0" prefWidth="164.0" style="-fx-border-radius: 15; -fx-background-radius: 2px; -fx-border-color: #ccc;">
+                        <children>
+                           <JFXTextField fx:id="delay" layoutX="9.0" layoutY="27.0" promptText="Delay Time" />
+                        </children>
+                     </Pane>
+                     <JFXTreeTableView fx:id="treeView" layoutX="176.0" layoutY="-1.0" prefHeight="440.0" prefWidth="374.0" />
+                     <JFXButton buttonType="RAISED" layoutX="27.0" layoutY="394.0" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="129.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Save" textFill="WHITE" />
+                     <Pane layoutX="5.0" layoutY="119.0" prefHeight="80.0" prefWidth="164.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
+                        <children>
+                           <JFXTextField fx:id="driverId" layoutX="10.0" layoutY="30.0" promptText="Driver-Id" />
+                        </children>
+                     </Pane>
+                     <Pane layoutX="6.0" layoutY="220.0" prefHeight="125.0" prefWidth="164.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
+                        <children>
+                           <JFXTextArea fx:id="driverMessage" layoutX="10.0" layoutY="25.0" prefHeight="75.0" prefWidth="151.0" promptText="Message" />
+                        </children>
+                     </Pane>
                   </children></AnchorPane>
                 </content>
             </Tab>
