--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -40,8 +40,8 @@
                   </children></AnchorPane>
                 </content>
             </Tab>
-            <fx:include source="viewProfile.fxml" />
+            <!--<fx:include source="viewProfile.fxml" />-->
         </tabs>
     </TabPane>
-    <Button id="exitLoginButton" fx:id="signOutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
+    <!--<Button id="exitLoginButton" fx:id="signOutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />-->
 </AnchorPane>
