--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -9,6 +9,8 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver" stylesheets="@../../../resources/style/login.css">
    <children>
       <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
@@ -18,17 +20,17 @@
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                      <children>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="122.0" layoutX="294.0" layoutY="174.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="175.0" />
-                        <ComboBox fx:id="comboTaxi" layoutX="307.0" layoutY="203.0" prefWidth="150.0" />
-                        <Label layoutX="301.0" layoutY="186.0" prefHeight="17.0" prefWidth="71.0" text="I'm in:" />
+                        <JFXComboBox fx:id="comboTaxi"  promptText="I'm in" focusColor="#641c24" unFocusColor="#641c24" labelFloat="true" layoutX="307.0" layoutY="203.0" prefWidth="150.0" />
+                        <!--<Label layoutX="301.0" layoutY="186.0" prefHeight="17.0" prefWidth="71.0" text="I'm in:" />-->
                         <Label layoutX="301.0" layoutY="236.0" prefHeight="17.0" prefWidth="116.0" text="I'm availiable:" />
-                        <Button fx:id="confirmBtn" disable="true" layoutX="306.0" layoutY="253.0" mnemonicParsing="false" onAction="#saveTaxiAvailability" prefHeight="32.0" prefWidth="150.0" text="Confirm" />
+                        <JFXButton fx:id="confirmBtn" disable="true" textFill="white" buttonType="RAISED" ripplerFill="white" style="-fx-background-color: #641c24" layoutX="306.0" layoutY="253.0" mnemonicParsing="false" onAction="#saveTaxiAvailability" prefHeight="32.0" prefWidth="150.0" text="Confirm" />
                         <Label fx:id="taxiStatus" layoutX="30.0" layoutY="29.0" prefHeight="76.0" prefWidth="708.0">
                            <font>
                               <Font size="32.0" />
                            </font>
                         </Label>
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="46.0" layoutX="295.0" layoutY="305.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="175.0" />
-                        <Button layoutX="307.0" layoutY="312.0" mnemonicParsing="false" onAction="#saveTaxiUnAvailability" prefHeight="32.0" prefWidth="150.0" text="I'm not available" />
+                        <JFXButton layoutX="307.0" buttonType="RAISED" ripplerFill="white" textFill="white" style="-fx-background-color: #641c24" layoutY="312.0" mnemonicParsing="false" onAction="#saveTaxiUnAvailability" prefHeight="32.0" prefWidth="150.0" text="I'm not available" />
                      </children></AnchorPane>
                </content>
             </Tab>
