--- a/src/com/github/view/userScreen.fxml
+++ b/src/com/github/view/userScreen.fxml
@@ -24,17 +24,17 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="122.0" layoutX="14.0" layoutY="219.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="175.0" />
-                        <JFXComboBox fx:id="fromCombo" layoutX="28.0" layoutY="45.0" prefWidth="150.0" />
-                        <JFXComboBox fx:id="toCombo" layoutX="28.0" layoutY="105.0" prefWidth="150.0" />
-                        <Label layoutX="28.0" layoutY="28.0" textFill="#641c24" prefHeight="17.0" prefWidth="71.0" text="From:" />
-                        <Label layoutX="28.0" layoutY="88.0" textFill="#641c24" prefHeight="17.0" prefWidth="71.0" text="To:" />
-                        <Label fx:id="cost" layoutX="197.0" textFill="#641c24" layoutY="8.0" prefHeight="389.0" prefWidth="434.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="122.0" layoutX="14.0"  layoutY="219.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="175.0" />
+                        <JFXComboBox fx:id="fromCombo" promptText="From:" unFocusColor="#641c24" labelFloat="true" focusColor="#641c24" layoutX="28.0" layoutY="45.0" prefWidth="150.0" />
+                        <JFXComboBox fx:id="toCombo" promptText="To:" layoutX="28.0" unFocusColor="#641c24" labelFloat="true" focusColor="#641c24" layoutY="105.0" prefWidth="150.0" />
+                        <!--<Label layoutX="28.0" layoutY="28.0"  prefHeight="17.0" prefWidth="71.0" text="From:" />-->
+                        <!--<Label layoutX="28.0" layoutY="88.0"  prefHeight="17.0" prefWidth="71.0" text="To:" />-->
+                        <Label fx:id="cost" layoutX="197.0"  layoutY="8.0" prefHeight="389.0" prefWidth="434.0" />
                         <ScrollPane fx:id="searchResults" layoutX="198.0" layoutY="12.0" prefHeight="339.0" prefWidth="500.0" />
                         <JFXButton fx:id="searchButton" ripplerFill="WHITE" textFill="WHITE" style="-fx-background-color: #641c24;" buttonType="RAISED" disable="true" layoutX="28.0" layoutY="162.0" mnemonicParsing="false" onAction="#setSearchResult" prefHeight="32.0" prefWidth="150.0" text="Search" />
-                        <JFXComboBox fx:id="comboTaxi" layoutX="28.0" layoutY="246.0" prefWidth="150.0" />
-                        <Label layoutX="28.0" textFill="#641c24" layoutY="226.0" prefHeight="17.0" prefWidth="71.0" text="I'm in:" />
-                        <Label layoutX="28.0" textFill="#641c24" layoutY="273.0" prefHeight="17.0" prefWidth="116.0" text="I want to order a taxi:" />
+                        <JFXComboBox fx:id="comboTaxi" layoutX="28.0" promptText="I'm in:" focusColor="#641c24" unFocusColor="#641c24" labelFloat="true" layoutY="246.0" prefWidth="150.0" />
+                        <!--<Label layoutX="28.0" textFill="#641c24" layoutY="226.0" prefHeight="17.0" prefWidth="71.0" text="I'm in:" />-->
+                        <Label layoutX="28.0"  layoutY="273.0" prefHeight="17.0" prefWidth="116.0" text="I want to order a taxi:" />
                         <JFXButton fx:id="orderTaxi" ripplerFill="WHITE" textFill="WHITE" style="-fx-background-color: #641c24;" buttonType="RAISED" layoutX="28.0" layoutY="296.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="150.0" disable="true" text="Order" />
                      </children></AnchorPane>
                   </content>
@@ -43,10 +43,10 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="411.0" prefWidth="480.0">
                      <children>
-                        <Label layoutX="31.0" textFill="#641c24" layoutY="25.0" prefHeight="17.0" prefWidth="184.0" text="Your Balance:" />
+                        <Label layoutX="31.0"  layoutY="25.0" prefHeight="17.0" prefWidth="184.0" text="Your Balance:" />
                         <JFXTextField fx:id="deposit" unFocusColor="#641c24" focusColor="#641c24" labelFloat="true" layoutX="31.0"  layoutY="233.0" promptText="Add credit" />
                         <JFXButton fx:id="processBtn" textFill="WHITE" ripplerFill="WHITE" style="-fx-background-color: #641c24;" buttonType="RAISED" disable="true" layoutX="249.0" layoutY="286.0" mnemonicParsing="false" onAction="#processButton" prefHeight="45.0" prefWidth="115.0" text="Process" />
-                        <Label fx:id="balance" alignment="CENTER" textFill="#641c24" layoutX="31.0" layoutY="57.0" prefHeight="111.0" prefWidth="312.0" text="Label" textAlignment="CENTER">
+                        <Label fx:id="balance" alignment="CENTER"  layoutX="31.0" layoutY="57.0" prefHeight="111.0" prefWidth="312.0" text="Label" textAlignment="CENTER">
                            <font>
                               <Font size="60.0" />
                            </font>
@@ -65,7 +65,7 @@
                      <children>
                         <JFXTextArea fx:id="complainArea" focusColor="#641c24" labelFloat="true" unFocusColor="#641c24" layoutX="245.0" layoutY="75.0" prefHeight="261.0" prefWidth="273.0" />
                         <JFXButton layoutX="466.0" textFill="WHITE" buttonType="RAISED" ripplerFill="WHITE" style="-fx-background-color: #641c24;" layoutY="343.0" mnemonicParsing="false" onAction="#makeComplain" text="Submit" />
-                        <Label layoutX="245.0" layoutY="52.0" textFill="#641c24" text="Describe your issue" />
+                        <Label layoutX="245.0" layoutY="52.0"  text="Describe your issue" />
                      </children></AnchorPane>
                      </content>
                   </Tab>
