--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -1,47 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextArea?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
-    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-            <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
-                <content>
-                    <Button mnemonicParsing="false" text="Button" />
-                </content>
-                <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                  <children>
-                     <Pane layoutX="5.0" layoutY="14.0" opacity="0.85" prefHeight="80.0" prefWidth="164.0" style="-fx-border-radius: 15; -fx-background-radius: 2px; -fx-border-color: #ccc;">
-                        <children>
-                           <JFXTextField fx:id="delay" layoutX="9.0" layoutY="27.0" promptText="Delay Time" />
-                        </children>
-                     </Pane>
-                     <JFXTreeTableView fx:id="treeView" layoutX="176.0" layoutY="-1.0" prefHeight="440.0" prefWidth="374.0" />
-                     <JFXButton buttonType="RAISED" layoutX="27.0" layoutY="394.0" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="129.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Save" textFill="WHITE" />
-                     <Pane layoutX="5.0" layoutY="119.0" prefHeight="80.0" prefWidth="164.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
-                        <children>
-                           <JFXTextField fx:id="driverId" layoutX="10.0" layoutY="30.0" promptText="Driver-Id" />
-                        </children>
-                     </Pane>
-                     <Pane layoutX="6.0" layoutY="220.0" prefHeight="125.0" prefWidth="164.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
-                        <children>
-                           <JFXTextArea fx:id="driverMessage" layoutX="10.0" layoutY="25.0" prefHeight="75.0" prefWidth="151.0" promptText="Message" />
-                        </children>
-                     </Pane>
-                  </children></AnchorPane>
-                </content>
-            </Tab>
-            <!--<fx:include source="viewProfile.fxml" />-->
-        </tabs>
-    </TabPane>
-    <!--<Button id="exitLoginButton" fx:id="signOutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />-->
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
+    <children>
+        <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab style="-fx-background-radius: 20;" text="Update status">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
+                            <children>
+                                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="175.0" layoutX="286.0" layoutY="280.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="192.0" />
+                                <ComboBox fx:id="comboLate" layoutX="306.0" layoutY="318.0" prefWidth="150.0" />
+                                <Label layoutX="301.0" layoutY="292.0" prefHeight="17.0" prefWidth="216.0" text="It seems that I'm gonna late for:" />
+                                <Button fx:id="confirmBtn" disable="true" layoutX="306.0" layoutY="416.0" mnemonicParsing="false" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="150.0" text="Confirm" />
+                                <Label fx:id="driverStatus" layoutX="30.0" layoutY="29.0" prefHeight="139.0" prefWidth="708.0" />
+                        <TextField fx:id="delayMessage" layoutX="307.0" layoutY="374.0" prefHeight="34.0" prefWidth="149.0" />
+                        <Label layoutX="301.0" layoutY="351.0" prefHeight="17.0" prefWidth="216.0" text="Because:" />
+                            </children></AnchorPane>
+                    </content>
+                </Tab>
+<!--
+                <fx:include source="viewProfile.fxml" />
+-->
+            </tabs>
+        </TabPane>
+    </children>
+    <!--<Button id="exitLoginButton" fx:id="signOutButton" layoutX="736.0" layoutY="1.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />-->
 </AnchorPane>
