--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -27,11 +27,9 @@
                             </children></AnchorPane>
                     </content>
                 </Tab>
-<!--
                 <fx:include source="viewProfile.fxml" />
--->
             </tabs>
         </TabPane>
     </children>
-    <!--<Button id="exitLoginButton" fx:id="signOutButton" layoutX="736.0" layoutY="1.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />-->
+    <Button id="exitLoginButton" fx:id="signOutButton" layoutX="736.0" layoutY="1.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
 </AnchorPane>
