--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -1,35 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
-    <children>
-        <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
+        <TabPane prefHeight="500.0" prefWidth="760.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab style="-fx-background-radius: 20;" text="Update status">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                             <children>
-                                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="175.0" layoutX="286.0" layoutY="280.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="192.0" />
-                                <ComboBox fx:id="comboLate" layoutX="306.0" layoutY="318.0" prefWidth="150.0" />
-                                <Label layoutX="301.0" layoutY="292.0" prefHeight="17.0" prefWidth="216.0" text="It seems that I'm gonna late for:" />
-                                <Button fx:id="confirmBtn" disable="true" layoutX="306.0" layoutY="416.0" mnemonicParsing="false" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="150.0" text="Confirm" />
-                                <Label fx:id="driverStatus" layoutX="30.0" layoutY="29.0" prefHeight="139.0" prefWidth="708.0" />
-                        <TextField fx:id="delayMessage" layoutX="307.0" layoutY="374.0" prefHeight="34.0" prefWidth="149.0" />
-                        <Label layoutX="301.0" layoutY="351.0" prefHeight="17.0" prefWidth="216.0" text="Because:" />
+                     <Pane opacity="0.85" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                        <children>
+                                      <Label fx:id="driverStatus" layoutX="17.0" layoutY="21.0" prefHeight="139.0" prefWidth="708.0" />
+                           <Pane layoutX="271.0" layoutY="238.0" prefHeight="177.0" prefWidth="200.0" style="-fx-background-radius: 2px; -fx-border-radius: 15; -fx-border-color: #ccc;">
+                              <children>
+                                            <JFXComboBox fx:id="comboLate" focusColor="#641c24" labelFloat="true" layoutX="26.0" layoutY="38.0" prefWidth="150.0" promptText="Length" unFocusColor="#641c24" />
+                                    <JFXTextField fx:id="delayMessage" focusColor="#641c24" labelFloat="true" layoutX="27.0" layoutY="89.0" prefHeight="34.0" prefWidth="149.0" promptText="Reason" unFocusColor="#641c24" />
+                                            <JFXButton fx:id="confirmBtn" buttonType="RAISED" disable="true" layoutX="25.0" layoutY="131.0" mnemonicParsing="false" onAction="#saveDelayAndMessage" prefHeight="32.0" prefWidth="150.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Confirm" textFill="WHITE">
+                                    <opaqueInsets>
+                                       <Insets />
+                                    </opaqueInsets>
+                                 </JFXButton>
+                              </children>
+                           </Pane>
+                        </children>
+                     </Pane>
                             </children></AnchorPane>
                     </content>
                 </Tab>
                 <fx:include source="viewProfile.fxml" />
             </tabs>
         </TabPane>
-    </children>
     <Button id="exitLoginButton" fx:id="signOutButton" layoutX="736.0" layoutY="1.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
 </AnchorPane>
