--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -1,35 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver" stylesheets="@../../../resources/style/login.css">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
       <TabPane prefHeight="501.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
             <Tab style="-fx-background-radius: 20;" text="Update status">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="333.0" prefWidth="241.0">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="122.0" layoutX="294.0" layoutY="174.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="175.0" />
-                        <JFXComboBox fx:id="comboTaxi"  promptText="I'm in" focusColor="#641c24" unFocusColor="#641c24" labelFloat="true" layoutX="307.0" layoutY="203.0" prefWidth="150.0" />
-                        <!--<Label layoutX="301.0" layoutY="186.0" prefHeight="17.0" prefWidth="71.0" text="I'm in:" />-->
-                        <Label layoutX="301.0" layoutY="236.0" prefHeight="17.0" prefWidth="116.0" text="I'm availiable:" />
-                        <JFXButton fx:id="confirmBtn" disable="true" textFill="white" buttonType="RAISED" ripplerFill="white" style="-fx-background-color: #641c24" layoutX="306.0" layoutY="253.0" mnemonicParsing="false" onAction="#saveTaxiAvailability" prefHeight="32.0" prefWidth="150.0" text="Confirm" />
-                        <Label fx:id="taxiStatus" layoutX="30.0" layoutY="29.0" prefHeight="76.0" prefWidth="708.0">
-                           <font>
-                              <Font size="32.0" />
-                           </font>
-                        </Label>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="46.0" layoutX="295.0" layoutY="305.0" stroke="#7a7a7a33" strokeType="INSIDE" strokeWidth="4.0" width="175.0" />
-                        <JFXButton layoutX="307.0" buttonType="RAISED" ripplerFill="white" textFill="white" style="-fx-background-color: #641c24" layoutY="312.0" mnemonicParsing="false" onAction="#saveTaxiUnAvailability" prefHeight="32.0" prefWidth="150.0" text="I'm not available" />
+                     <Pane opacity="0.85" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff; -fx-background-radius: 6px;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                        <children>
+                              <Label fx:id="taxiStatus" layoutX="18.0" layoutY="31.0" prefHeight="101.0" prefWidth="708.0">
+                                 <font>
+                                    <Font size="32.0" />
+                                 </font>
+                              </Label>
+                           <Pane layoutX="286.0" layoutY="206.0" opacity="0.85" prefHeight="146.0" prefWidth="171.0" style="-fx-background-radius: 2px; -fx-border-color: #ccc; -fx-border-radius: 15;">
+                              <children>
+                                    <JFXButton fx:id="confirmBtn" buttonType="RAISED" disable="true" layoutX="14.0" layoutY="100.0" mnemonicParsing="false" onAction="#saveTaxiAvailability" prefHeight="32.0" prefWidth="150.0" ripplerFill="white" style="-fx-background-color: #641c24" text="Confirm" textFill="white" />
+                                    <JFXComboBox fx:id="comboTaxi" focusColor="#641c24" labelFloat="true" layoutX="11.0" layoutY="28.0" prefWidth="150.0" promptText="I'm in" unFocusColor="#641c24" />
+                                    <!--<Label layoutX="301.0" layoutY="186.0" prefHeight="17.0" prefWidth="71.0" text="I'm in:" />-->
+                                    <Label layoutX="14.0" layoutY="68.0" prefHeight="17.0" prefWidth="116.0" text="I'm availiable:" />
+                              </children>
+                           </Pane>
+                           <Pane layoutX="286.0" layoutY="359.0" opacity="0.85" prefHeight="69.0" prefWidth="171.0" style="-fx-border-color: #ccc; -fx-background-radius: 2px; -fx-border-radius: 15;">
+                              <children>
+                                    <JFXButton buttonType="RAISED" layoutX="11.0" layoutY="19.0" mnemonicParsing="false" onAction="#saveTaxiUnAvailability" prefHeight="32.0" prefWidth="150.0" ripplerFill="white" style="-fx-background-color: #641c24" text="I'm not available" textFill="white" />
+                              </children>
+                           </Pane>
+                        </children>
+                     </Pane>
                      </children></AnchorPane>
                </content>
             </Tab>
